refactor: 캐싱, 인덱스 추